删除数据文件;更新脚本

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,21 @@
 test.go
 draw_examples.py
 newest_result*
-results
-logs
-figs
+
 lessChain*
-*/geth-chain-data/data/geth/*
 *DS_Store
+
+
+
+data/*.csv
+eth_chain/geth-chain-data/data/geth
+experiments/figs
+experiments/results*
+experiments/*.log
+logs
+pbftLog
+lessChain
+lessChain.exe
+newest_result.csv
+newest_result.log
 *.log
-len*.csv
